data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1138.wast
;; 9. **Uninitialized Index:**    - Simulate an uninitialized value as the index for a `br_table` instruction, checking for proper handling and rejection of indeterminate behavior.    - **Constraint:** Ensures robust handling of potentially invalid indices.

(assert_invalid 
  (module (func $uninit-index 
    (block (br_table 0 (i32.const 0 (i32.const))))
  ))
  "unknown label"
)